# Forecasting_Bot_Q2

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
Bot/: Dataset.py  FastContentExtractor.py  HTMLContentExtractor.py  benchmark.py  binary.py  browser.py  forecaster.py  forecaster_template.py  llm_calls.py  main.py  metaculus_bot.py  multiple_choice.py  numeric.py  prompts.py  search.py  try.py
Q2_tournament_forecasts/: At_the_end_of_June_2025__will_Wikipedia_still_list_all_these_countries_as__currently__blocking_acces.txt  Before_July_1__2025__will_Anthropic_announce_that_it_is_planning_an_IPO_.txt  Before_July_1__2025__will_Databricks_announce_that_it_is_planning_an_IPO_.txt  Before_July_1__2025__will_Discord_announce_that_it_is_planning_an_IPO_.txt  Before_July_1__2025__will_Florida_enact_legislation_expanding_its_verification_requirements_of_a_vot.txt  Before_July_1__2025__will_Muqtada_al_Sadr_s_Alliance_Towards_Reforms_party_announce_that_it_will_par.txt  Before_July_1__2025__will_Ohio_enact_legislation_expanding_its_verification_requirements_of_a_voter_.txt  Before_July_1__2025__will_Reform_UK_be_the_highest_polling_party_in_the_UK_by_at_least_4_points__acc.txt  Before_July_1__2025__will_Rippling_announce_that_it_is_planning_an_IPO_.txt  Before_July_1__2025__will_the_International_Traditional_Karate_Federation_announce_that_Egypt_has_be.txt  Before_July_1__2025__will_the_United_States_accuse_Russia_of_invading_any_country_other_than_Ukraine.txt  For_Q2_2025__how_many_banks_will_be_listed_on_the_FDIC_s_Failed_Bank_List_.txt  (+358 more)
(+2 files in other folders)
