[project]
name = "forecasting-bot-q2"
version = "0.1.0"
description = "Multi-agent ensemble forecasting bot for Metaculus tournaments"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "asknews",
    "beautifulsoup4",
    "boilerpy3",
    "dateparser",
    "python-dotenv",
    "matplotlib",
    "numpy",
    "openai",
    "pandas",
    "patchright",
    "readability-lxml",
    "requests",
    "scipy",
    "trafilatura",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Bot"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]